# ContextWeaver

./: .gitignore  .lab3-worklog.md  LICENSE  README.md  conftest.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
src/: cli.py  filters.py  ignore.py  main.py  scanner.py
src/contextweaver/: formatter.py  main.py  scanner.py  utils.py
tests/: index.c  test_ignore.py  test_main.py  test_scanner.py
