[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextweaver"
version = "1.0.0"
description = "ContextWeaver: generate LLM-friendly snapshots of codebases."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Karthika Krishnan" }
]

[project.urls]
Homepage = "https://github.com/kkrishnan10/ContextWeaver"
Source = "https://github.com/kkrishnan10/ContextWeaver"
Issues = "https://github.com/kkrishnan10/ContextWeaver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
contextweaver = "contextweaver.cli:main"
