[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "contextweaver"
version = "1.0.1"
description = "A command-line tool that generates LLM-friendly snapshots of a project."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Karthika Krishnan" }
]

[project.urls]
Homepage = "https://github.com/kkrishnan10/ContextWeaver"
Source = "https://github.com/kkrishnan10/ContextWeaver"
Issues = "https://github.com/kkrishnan10/ContextWeaver/issues"

[tool.setuptools.packages.find]
where = ["src"]

[project.scripts]
contextweaver = "contextweaver.cli:main"
